# ercole-agent-solaris

./: .gitignore  CMakeLists.txt  README.md  config.json  configuration.cpp  configuration.h  main.cpp  unmarshaller.cpp  unmarshaller.h  utils.cpp  utils.h
fetch/: db  dbmounted  dbstatus  dbversion  feature  filesystem  host  license  oratab  patch  schema  stats  tablespace
package/solaris11/: ercole-agent-start  ercole-agent.xml  pkginfo  prototype
sql/: db.sql  dbmounted.sql  feature-10.sql  feature.sql  license-10.sql  license.sql  patch-12.sql  patch.sql  schema.sql  stats.sql  ts.sql
